// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard navbar renders correctly in side position 1`] = `

<div id="dashboard-navbar"
     data-server-rendered="true"
>
  <nav class="side">
    <div class="brand-wrapper navbar-light text-center">
      <nuxt-link to="[object Object]"
                 class="brand navbar-brand"
      >
        My Brand
      </nuxt-link>
    </div>
    <ul class="nav">
      <li data-index="0"
          class="nav-item"
      >
        <a href="#"
           target="_self"
           aria-disabled="false"
           class="nav-link"
        >
          Dashboard
        </a>
      </li>
      <li data-index="1"
          class="nav-item"
      >
        <a href="#"
           target="_self"
           aria-disabled="false"
           class="nav-link"
        >
          Featured Projects
        </a>
      </li>
    </ul>
  </nav>
</div>

`;

exports[`Dashboard navbar renders correctly in top position 1`] = `

<div id="dashboard-navbar"
     data-server-rendered="true"
>
  <nav class="top">
    <div class="brand-wrapper navbar-light text-center">
      <nuxt-link to="[object Object]"
                 class="brand navbar-brand"
      >
        My Brand
      </nuxt-link>
    </div>
    <ul class="nav">
      <li data-index="0"
          class="nav-item"
      >
        <a href="#"
           target="_self"
           aria-disabled="false"
           class="nav-link"
        >
          Dashboard
        </a>
      </li>
      <li data-index="1"
          class="nav-item"
      >
        <a href="#"
           target="_self"
           aria-disabled="false"
           class="nav-link"
        >
          Featured Projects
        </a>
      </li>
    </ul>
  </nav>
</div>

`;
